kubernetes/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"true\"
spec:
  tls:
  - hosts:
    - phono.marcote.org
    secretName: wildcard-marcote-org
  rules:
  - host: phono.marcote.org
    http:
      paths:
      - backend:
          serviceName: api
          servicePort: 5000
        path: /
      - backend:
          serviceName: collector
          servicePort: 6000
        path: /collector
